WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285730
[WebGPU] CTS test web_platform,copyToTexture,ImageBitmap:from_* does not pass
https://bugs.webkit.org/show_bug.cgi?id=285730
Summary
[WebGPU] CTS test web_platform,copyToTexture,ImageBitmap:from_* does not pass
Mike Wyrzykowski
Reported
2025-01-09 22:52:49 PST
[WebGPU] CTS test web_platform,copyToTexture,ImageBitmap:* does not pass
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-09 22:53:09 PST
<
rdar://problem/142668066
>
Mike Wyrzykowski
Comment 2
2025-01-10 09:34:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38850
EWS
Comment 3
2025-01-14 15:04:54 PST
Committed
288896@main
(5e65a5cb565e): <
https://commits.webkit.org/288896@main
> Reviewed commits have been landed. Closing PR #38850 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug