[WebGPU] CTS test web_platform,copyToTexture,ImageBitmap:from_* https://bugs.webkit.org/show_bug.cgi?id=285730 rdar://142668066

Reviewed by Tadeu Zagallo.

Update copyExternalImageToTexture so that that first two of four
subsuites of copyToTexture,ImageBitmap* pass

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/Modules/WebGPU/GPUQueue.cpp:
(WebCore::copyToDestinationFormat):
(WebCore::GPUQueue::copyExternalImageToTexture):

Canonical link: https://commits.webkit.org/288896@main